--- a/config/base-pure.template.html
+++ b/config/base-pure.template.html
@@ -5,6 +5,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1"/>
         <meta name="keywords" content="производство, наружной, рекламы" />
+
+
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
         <meta
                 name="description"
                 content="!!!meta-description-content!!!"
